[package]
name = "koth-ping-pong"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
tokio = "1.28.2"
askama = {version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
tracing = "0.1.40"
tower-http = { version = "0.5.1", features = ["fs"] }
